# DisCast

./: README.md  config.yml  main.py  podcast.py  pyproject.toml
bot/: __init__.py
bot/types/: config.py
