[tool.poetry]
name = "discast"
version = "0.1.0"
description = ""
authors = ["踢低吸 <tdc@tdccc.com.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
coloredlogs = "^15.0.1"
dataclasses-json = "^0.5.6"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
